TEST_PROGRAMS/INVALID/yu_hua/c.min
while 1 do
  # nothing
  if -1 then
  endif
done
.
